--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Outliers</title>
+    <link rel="icon" type="image/png" href="lo.png">
     <link rel="stylesheet" href="base.css">
 </head>
 <body>
