--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </ul>
     <p>Bem-vindo a Local Outliers</p>
     <ol>
-      <li>1. Monthly Meeting: virtual, 2.5 hours, mandatory</li>
-      <li>2. WhatsApp Group: map, ask, help</li>
-      <li>3. Quarterly Adventure: in-person, connect, enjoy</li>
+      <li>Monthly Meeting: virtual, 2.5 hours, mandatory</li>
+      <li>WhatsApp Group: map, ask, help</li>
+      <li>Quarterly Adventure: in-person, connect, enjoy</li>
     </ol>
     <p>*Precisa faturamento acima de 5M BRL por ano</p>
     <p>Membership levels:</p>
