--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <div class="text">
+    <img src="lo.png" alt="Local Outliers">
     <h1>Local Outliers</h1>
     <p>A private network for enduring founders.</p>
-    <p><span>EMPRENDEDOR</span>EMPRESARIO</p>
+    <p><span class="strikethrough">EMPRENDEDOR</span> EMPRESARIO</p>
     <ul>
       <li>Não levantou milhões em rodadas de investimento?</li>
       <li>A Forbes não colocou você nos 30U30?</li>
