--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="text">
     <h1>Local Outliers</h1>
     <p>A private network for enduring founders.</p>
-    <p><span class="strikethrough">EMPRENDEDOR</span> EMPRESARIO</p>
+    <p class="margin-top"><span class="strikethrough">EMPRENDEDOR</span> EMPRESARIO</p>
     <ul>
       <li>Não levantou milhões em rodadas de investimento?</li>
       <li>A Forbes não colocou você nos 30U30?</li>
@@ -24,21 +24,21 @@
       <li>Não pivotou para fazer soluções de AI?</li>
       <li>Nunca foi entrevistado num podcast?</li>
     </ul>
-    <p>Bem-vindo a Local Outliers</p>
+    <p class="margin-top">Bem-vindo a Local Outliers</p>
     <ol>
       <li>Monthly Meeting: virtual, 2.5 hours, mandatory</li>
       <li>WhatsApp Group: map, ask, help</li>
       <li>Quarterly Adventure: in-person, connect, enjoy</li>
     </ol>
     <p>*Precisa faturamento acima de 5M BRL por ano</p>
-    <p>Membership levels:</p>
+    <p class="margin-top">Membership levels:</p>
     <ul>
       <li>Junior: 2k BRL / month — min. 5M BRL in anual sales</li>
       <li>Senior: 4k BRL / month — min. 20M BRL in anual sales</li>
       <li>Master: 9k BRL / month — min. 50M BRL in anual sales</li>
     </ul>
     <p>*Monthly Meetings and WhatsApp Groups are based on these levels</p>
-    <p><a target="_blank" href="https://wa.me/34618382200?text=Ol%C3%A1,%20eu%20gostaria%20de%20me%20juntar%20aos%20Local%20Outliers.">JOIN NOW</a> — first month is free of charge.</p>
+    <p class="margin-top"><a target="_blank" href="https://wa.me/34618382200?text=Ol%C3%A1,%20eu%20gostaria%20de%20me%20juntar%20aos%20Local%20Outliers.">JOIN NOW</a> — first month is free of charge</p>
   </div>
 </body>
 </html>
