--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </ul>
     <p class="margin-top">Bem-vindo a Local Outliers</p>
     <ol>
-      <li>Monthly Meeting: virtual, 2.5 hours, mandatory</li>
-      <li>WhatsApp Group: map, ask, help</li>
+      <li>Monthly Meeting: virtual, mandatory, 2.5 hours</li>
+      <li>WhatsApp Group: ask, help, grow</li>
       <li>Quarterly Adventure: in-person, connect, enjoy</li>
     </ol>
     <p>*Precisa faturamento acima de 5M BRL por ano</p>
