--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <p class="margin-top"><span class="strikethrough">EMPRENDEDOR</span> EMPRESARIO</p>
     <ul>
       <li>Não levantou milhões em rodadas de investimento?</li>
-      <li>A Forbes não colocou você nos 30U30?</li>
+      <li>A Forbes não te incluiu na lista 30U30?</li>
       <li>Sua empresa gera lucro todos os meses?</li>
-      <li>Não vai ao trip de kite porque está focado em crescer seu negócio?</li>
-      <li>Não está democratizing nem disrupting nenhuma industria?</li>
-      <li>O seu escritório não tem mesa de ping pong?</li>
+      <li>Não vai ao trip de kite porque está focado em fazer seu negócio crescer?</li>
+      <li>Vocês não estão democratizando nem disruptando nenhuma indústria?</li>
+      <li>Seu escritório não tem mesa de ping pong?</li>
       <li>Dedica mais tempo aos seus clientes do que a fazer apresentações?</li>
       <li>Entra no LinkedIn apenas uma vez por mês?</li>
-      <li>Não pivotou para fazer soluções de AI?</li>
+      <li>Não pivotou para criar soluções de AI?</li>
       <li>Nunca foi entrevistado num podcast?</li>
     </ul>
     <p class="margin-top">Bem-vindo a Local Outliers</p>
@@ -30,7 +30,6 @@
       <li>WhatsApp Group: ask, help, grow</li>
       <li>Quarterly Adventure: in-person, connect, enjoy</li>
     </ol>
-    <p>*Precisa faturamento acima de 5M BRL por ano</p>
     <p class="margin-top">Membership levels:</p>
     <ul>
       <li>Junior: 2k BRL / month — min. 5M BRL in anual sales</li>
