--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </ol>
     <p class="margin-top">Membership levels:</p>
     <ul>
-      <li>Junior: 2k BRL / month — min. 5M BRL in anual sales</li>
-      <li>Senior: 4k BRL / month — min. 20M BRL in anual sales</li>
-      <li>Master: 9k BRL / month — min. 50M BRL in anual sales</li>
+      <li>Junior: 2k BRL/mo — min. 5M BRL in anual sales</li>
+      <li>Senior: 4k BRL/mo — min. 20M BRL in anual sales</li>
+      <li>Master: 9k BRL/mo — min. 50M BRL in anual sales</li>
     </ul>
     <p>*Monthly Meetings and WhatsApp Groups are based on these levels</p>
     <p class="margin-top"><a target="_blank" href="https://wa.me/34618382200?text=Ol%C3%A1,%20eu%20gostaria%20de%20me%20juntar%20aos%20Local%20Outliers.">JOIN NOW</a> — first month is free of charge</p>
