--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li>Master: 9k BRL/mo — min. 50M BRL in anual sales</li>
     </ul>
     <p>*Monthly Meetings and WhatsApp Groups are based on these levels</p>
-    <p class="margin-top"><a target="_blank" href="https://wa.me/34618382200?text=Ol%C3%A1,%20eu%20gostaria%20de%20me%20juntar%20aos%20Local%20Outliers.">JOIN NOW</a> — first month is free of charge</p>
+    <p class="margin-top"><a target="_blank" href="https://wa.me/34618382200?text=Ol%C3%A1,%20eu%20gostaria%20de%20me%20juntar%20aos%20Local%20Outliers.">JOIN NOW</a> — the first month is free of charge</p>
   </div>
 </body>
 </html>
