--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
     <p class="margin-top">Bem-vindo a Local Outliers</p>
     <ol>
-      <li>Monthly Meeting: virtual, mandatory, 2.5 hours</li>
+      <li>Monthly Meeting: 2.5 hours, mandatory</li>
       <li>WhatsApp Group: ask, help, grow</li>
       <li>Quarterly Adventure: in-person, connect, enjoy</li>
     </ol>
@@ -36,7 +36,7 @@
       <li>Senior: 4k BRL/mo — min. 20M BRL in anual sales</li>
       <li>Master: 9k BRL/mo — min. 50M BRL in anual sales</li>
     </ul>
-    <p>*Monthly Meetings and WhatsApp Groups are based on these levels</p>
+    <p>*Monthly Meetings and WhatsApp Groups are based on levels above</p>
     <p class="margin-top"><a target="_blank" href="https://wa.me/34618382200?text=Ol%C3%A1,%20eu%20gostaria%20de%20me%20juntar%20aos%20Local%20Outliers.">JOIN NOW</a> — the first month is free of charge</p>
   </div>
 </body>
