--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li>Não pivotou para criar soluções de AI?</li>
       <li>Nunca foi entrevistado num podcast?</li>
     </ul>
-    <p class="margin-top">Bem-vindo a Local Outliers</p>
+    <p class="margin-top">Bem-vindo aos Local Outliers</p>
     <ol>
       <li>Monthly Meeting: 2.5 hours, mandatory</li>
       <li>WhatsApp Group: ask, help, grow</li>
