--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li>Entra no LinkedIn apenas uma vez por mês?</li>
       <li>Não pivotou para criar soluções de AI?</li>
       <li>Nunca foi entrevistado num podcast?</li>
-      <li>Sua rede favorita é o X?</li>
+      <li>Sua rede favorita também é o X?</li>
     </ul>
     <p class="margin-top">Bem-vindo aos Local Outliers</p>
     <ol>
